v0.18.0/_sources/gallery/images/track_sampling.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/images/track_sampling.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_images_track_sampling.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_images_track_sampling.py:


Sampling along tracks
=====================

The :func:`pygmt.grdtrack` function samples a raster grid's value along
specified points. We will need to input a 2-D raster to ``grid`` which can be
an :class:`xarray.DataArray`. The argument passed to the ``points`` parameter
can be a :class:`pandas.DataFrame` table where the first two columns are
x and y (or longitude and latitude). Note also that there is a ``newcolname``
parameter that will be used to name the new column of values sampled from the
grid.

Alternatively, a netCDF file path can be passed to ``grid``. An ASCII file path
can also be accepted for ``points``. To save an output ASCII file, a file name
argument needs to be passed to the ``outfile`` parameter.

.. GENERATED FROM PYTHON SOURCE LINES 19-44



.. image-sg:: /gallery/images/images/sphx_glr_track_sampling_001.png
   :alt: track sampling
   :srcset: /gallery/images/images/sphx_glr_track_sampling_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt

    # Load sample grid and point datasets
    grid = pygmt.datasets.load_earth_relief()
    points = pygmt.datasets.load_sample_data(name="ocean_ridge_points")
    # Sample the bathymetry along the world's ocean ridges at specified track
    # points
    track = pygmt.grdtrack(points=points, grid=grid, newcolname="bathymetry")

    fig = pygmt.Figure()
    # Plot the earth relief grid on Cylindrical Stereographic projection, masking
    # land areas
    fig.basemap(region="g", projection="Cyl_stere/150/-20/15c", frame=True)
    fig.grdimage(grid=grid, cmap="gmt/gray")
    fig.coast(land="#666666")
    # Plot the sampled bathymetry points using circles (c) of 0.15 cm size
    # Points are colored using elevation values (normalized for visual purposes)
    fig.plot(
        x=track.longitude,
        y=track.latitude,
        style="c0.15c",
        cmap="gmt/terra",
        fill=(track.bathymetry - track.bathymetry.mean()) / track.bathymetry.std(),
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.402 seconds)


.. _sphx_glr_download_gallery_images_track_sampling.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: track_sampling.ipynb <track_sampling.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: track_sampling.py <track_sampling.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: track_sampling.zip <track_sampling.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
